--- a/index.html
+++ b/index.html
@@ -6,6 +6,78 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    
+  <header>
+  	<div class="menu">
+    <nav class="wrapper clearfix">
+	    <a href="#">Home</a>
+		<a href="#">About</a>
+		<a href="#">Services</a>
+		<a href="#">Blog</a>
+		<a href="#">Contact Us</a>
+	</nav>	
+	</div>
+	</header>
+	<section class="hero">
+	<div class="wrapper clearfix">
+	 <h1>Busy Hands</h1>
+	 <nav class="social">
+	 <a href="#"><img src="images/google.png" alt="Google"></a>
+	 <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
+	 <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
+	 <a href="#"><img src="images/rss.png" alt="RSS">
+	</a>
+	</nav>
+	</div>
+	</section>
+	<section class="wrapper">
+		<blockquote>
+			Ut enim ad minim veniam, quis nostrud exercitation ullamco sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+		</blockquote>
+	<div class="box clearfix">
+	<h2>Home Box 1</h2>
+
+	<img class="column" src="images/photo-column1.jpg">
+		<p>Lorem ipsum dolor sit etconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<span><a href="#">Read more ></a></span>
+	</div>
+
+	<div class="box">
+	<h2>Home Box 2</h2>
+	<img src="images/photo-column2.jpg">
+		<p>Lorem ipsum dolor sit etconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<span><a href="#">Read more ></a></span>
+	</div>
+	<div class="box">
+	<h2>Home Box 3</h2>	
+	<img src="images/photo-column3.jpg">
+		<p>Lorem ipsum dolor sit etconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	<span><a href="#">Read more ></a></span>
+	</div>
+	</section>
+	<section class="footer clearfix">
+	<footer> 
+		<h2>Widget 1</h2>
+		<ul class="widget1 clearfix">
+			<li><a href="#">Documentation</a></li>
+			<li><a href="#">Plugins</a></li>
+			<li><a href="#">Suggest Ideas</a></li>
+			<li><a href="#">Support Forum</a></li>
+			<li><a href="#">Themes</a></li>
+			<li><a href="#">WordPress Blog</a></li>
+		</ul>
+		<h2>Widget 2</h2>
+		<p>Lorem ipsum dolor sit etconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit etconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+		<h2>Widget 3</h2>
+		<ul class="widget3">
+			<li><a href="#">Log in</a></li>
+			<li><a href="#">Entries RSS</a></li>
+			<li><a href="#">Comments RSS</a></li>
+			<li><a href="#">WordPress.org</a></li>
+		</ul>
+	<p class="copy">&copy; Copyright 2016 Busy Hands.</p>
+	<p class="bottom">Busy Hands theme brought to you by <a href="#">Busy People!<a></p>
+	</footer>
+	</section>
   </body>
 </html>
